5.3a1 -> 5.3b1
    - jbj: DB_CONFIG: fix: add mutex_set_max 8000. better scaling needed, todo++.
    - jbj: tests: re-enable additional build options.
    - jbj: tests: "make check" for RHEL6 beta passes.
    - jbj: tests: add band-aid to resurrect "make check-Caixa" CM12>CM14 upgrade
    - jbj: tests: use /usr/bin/wget to avoid discussing transport issues.
    - jbj: tests: fix: re-add %__check_files that dropped out somewehere.
    - jbj: logio: hack up a #define for bdb built w/i --with-uniquename=_rpmdb.
    - jbj: rpmsql: test version to avoid sqlite3_sourcid() AWOL symbol.
    - jbj: rpmsql: hack-o-round -lsqlite3 disabled modules loading (CM14).
    - jbj: upgrade from db-4.8.26 to db-5.0.21.
    - jbj: misc: expose st_foreach/st_free_table in loader maps. cpuinfo #ifdef?
    - jbj: tests: fix: invoke check-files from in-tree w "make check".
    - jbj: devtool: stub-in a configuration for Caixa Magica 14.
    - jbj: rpmfps: don't bother w file fingerprints for *.src.rpm installs.
    - jbj: rpmbf: sanity checks on rpmbfParam(n,e) arguments.
    - jbj: resurrect "make distcheck" (fails as always in file/*).
    - jbj: resurrect "make dist".
    - jbj: i18n: update po files (Translation Project).
    - jbj: retrofit (and resurrect) a rpm-5_3 branch w db-4.8.26.

5.2b1 -> 5.3a1
    - jbj: rpmvt: add header virtual table (no arrays/blobs yet).
    - jbj: rpmvt: add rpmtags virtual table.
    - jbj: rpmvt: permit column data types.
    - jbj: rpmvt: resurrect Nixdb against db.sqlite ValidPaths(path).
    - jbj: rpmvt: stub-in a loadable libsqldb.so module.
    - jbj: rpmvt: stub-in a loadable libsql.so module.
    - jbj: rpmvt: stub-in a loadable libsqlio.so module.
    - jbj: rpmsql: rewire rpmvt/rpmvc objects so sqlite/mutexes interoperate.
    - jbj: rpmsql: stub-in virtual table/cursor framework.
    - jbj: tests: update check-sql tests.
    - jbj: build: permit %post -p "<sql> OPTS ARGS" syntax.
    - jbj: rpmsql: use rpmio for input.