@@ -1,4 +1,7 @@
 5.3a1 -> 5.3b1
+    - jbj: rpmdb: fix: replace assert failures with RPMRC_FAIL returns.
+    - jbj: dbi: rework the error message to supply copious debug details.
+    - jbj: dbi: fix: --import as non-root assert failure.
     - jbj: DB_CONFIG: fix: add mutex_set_max 8000. better scaling needed, todo++.
     - jbj: tests: re-enable additional build options.
     - jbj: tests: "make check" for RHEL6 beta passes.
